--- a/YS.Admin.Web/YS.Admin.Web/Areas/SystemManage/Views/DataDict/DataDictIndex.cshtml
+++ b/YS.Admin.Web/YS.Admin.Web/Areas/SystemManage/Views/DataDict/DataDictIndex.cshtml
@@ -1,36 +1,84 @@
 ﻿@{
     Layout = "~/Areas/System/Views/Shared/_Index.cshtml";
 }
+<style>
+
+
+</style>
 <div class="container-div">
     <div class="row">
-        <div id="searchDiv" class="col-sm-12 search-collapse">
-            <div class="select-list">
-                <ul>
-                    <li>
-                        字典类型：<input id="dictType" col="DictType" type="text" />
-                    </li>
-                    <li>
-                        字典描述：<input id="remark" col="Remark" type="text" />
-                    </li>
-                    <li>
-                        <a id="btnSearch" class="btn btn-primary btn-sm" onclick="searchGrid()"><i class="fa fa-search"></i>&nbsp;搜索</a>
-                    </li>
-                </ul>
+
+        <div class="form-group" style="width:40%;float:left;background-color:white;min-height:100%">
+            <div class="box-header" style="padding-top:8px;margin-left:8px">
+                <div class="box-title">
+                    <i class="fa fa-book"></i>  字典目录
+                </div> 
+            </div>
+            <div id="searchDiv" class="col-sm-12 search-collapse">
+                <div class="select-list">
+                    <ul>
+                        <li>
+                            字典类型：<input id="dictType" col="DictType" type="text" />
+                        </li>
+                        <li>
+                            字典描述：<input id="remark" col="Remark" type="text" />
+                        </li>
+                        <li>
+                            <a id="btnSearch" class="btn btn-primary btn-sm" onclick="searchGrid()"><i class="fa fa-search"></i>&nbsp;搜索</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="btn-group-sm" id="toolbar">
+                <a id="btnAdd" class="btn btn-success" onclick="showSaveForm(true)"><i class="fa fa-plus"></i> 新增</a>
+                <a id="btnEdit" class="btn btn-primary disabled" onclick="showSaveForm(false)"><i class="fa fa-edit"></i> 修改</a>
+                <a id="btnDelete" class="btn btn-danger disabled" onclick="deleteForm()"><i class="fa fa-remove"></i> 删除</a>
+            </div>
+            <div class="col-sm-12 select-table table-striped">
+                <table id="gridTable" data-mobile-responsive="true"></table>
             </div>
         </div>
-        <div class="btn-group-sm" id="toolbar">
-            <a id="btnAdd" class="btn btn-success" onclick="showSaveForm(true)"><i class="fa fa-plus"></i> 新增</a>
-            <a id="btnEdit" class="btn btn-primary disabled" onclick="showSaveForm(false)"><i class="fa fa-edit"></i> 修改</a>
-            <a id="btnDelete" class="btn btn-danger disabled" onclick="deleteForm()"><i class="fa fa-remove"></i> 删除</a>
-        </div>
 
-        <div class="col-sm-12 select-table table-striped">
-            <table id="gridTable" data-mobile-responsive="true"></table>
+
+        <div class="form-group" style="width:59%;float:right;background-color:white;min-height:100%">
+            <div class="box-header" style="padding-top:8px;margin-left:8px">
+                <div class="box-title">
+                    <i class="fa fa-list-ul"></i> 字典目录内容
+                </div>
+            </div>
+             
+            <div id="searchValueDiv" class="col-sm-12 search-collapse">
+                <div class="select-list">
+                    <ul>
+                        <li>
+                            字典键：<input id="dictKey" col="DictKey" type="text" />
+                        </li>
+                        <li>
+                            字典值：<input id="dictValue" col="DictValue" type="text" />
+                        </li>
+                        <li>
+                            <a id="btnSearch" class="btn btn-primary btn-sm" onclick="searchGrid()"><i class="fa fa-search"></i>&nbsp;搜索</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="btn-group-sm" id="toolbarPermission">
+                <a id="btnValueAdd" class="btn btn-success" onclick="showValueSaveForm(true)"><i class="fa fa-plus"></i> 新增</a>
+                <a id="btnValueEdit" class="btn btn-primary disabled" onclick="showValueSaveForm(false)"><i class="fa fa-edit"></i> 修改</a>
+                <a id="btnValueDelete" class="btn btn-danger disabled" onclick="deleteValueForm()"><i class="fa fa-remove"></i> 删除</a>
+            </div>
+
+            <div class="col-sm-12 select-table table-striped">
+                <table id="gridValueTable" data-mobile-responsive="true"></table>
+            </div>
+
         </div>
     </div>
 </div>
 
 <script type="text/javascript">
+
+    var DictType = "";//默认目录类型
     $(function () {
         initGrid();
     });
@@ -42,7 +90,7 @@
             sortName: 'DictSort',
             sortOrder: 'Asc',
             columns: [
-                { checkbox: true, visible: true },
+                { radio: true, visible: true },  // 修改为radio
                 { field: 'Id', title: 'Id', visible: false },
                 { field: 'DictType', title: '字典类型' },
                 { field: 'Remark', title: '字典描述' },
@@ -51,23 +99,32 @@
                     field: 'BaseModifyTime', title: '创建时间', formatter: function (value, row, index) {
                         return ys.formatDate(value, "yyyy-MM-dd HH:mm:ss");
                     }
-                },
-                {
-                    title: '操作',
-                    align: 'center',
-                    formatter: function (value, row, index) {
-                        var actions = [];
-                        actions.push('<a class="btn btn-info btn-xs" href="#" onclick="showDataDictDetailForm(\'' + row.DictType + '\')"><i class="fa fa-list-ul"></i>字典值</a>');
-                        return actions.join('');
-                    }
                 }
+                // , {
+                //     title: '操作',
+                //     align: 'center',
+                //     formatter: function (value, row, index) {
+                //         var actions = [];
+                //         actions.push('<a class="btn btn-info btn-xs" href="#" onclick="showDataDictDetailForm(\'' + row.DictType + '\')"><i class="fa fa-list-ul"></i>字典值</a>');
+                //         return actions.join('');
+                //     }
+                // }
             ],
             queryParams: function (params) {
                 var pagination = $('#gridTable').ysTable('getPagination', params);
                 var queryString = $('#searchDiv').getWebControls(pagination);
                 return queryString;
+            },
+            onCheck: function (row) {  // 添加单选后触发事件
+                showDataDictDetailForm(row.DictType );
+            },
+            onLoadSuccess: function (data) {
+                showDataDictDetailForm("");
             }
         });
+
+        InitValueGrid();
+
     }
 
     function searchGrid() {
@@ -119,8 +176,126 @@
         }
     }
 
+    function searchValueGrid() {
+        $('#gridValueTable').ysTable('search');
+        if ($('#btnValueDelete')) {
+            $('#btnValueDelete').addClass('disabled');
+        }
+        if ($('#btnValueEdit')) {
+            $('#btnValueEdit').addClass('disabled');
+        }
+    }
+
+
+    // bootstraple table 行选中按钮样式状态变更
+    $("#gridValueTable").on("check.bs.table uncheck.bs.table check-all.bs.table uncheck-all.bs.table", function () {
+        var ids = $("#gridValueTable").bootstrapTable("getSelections");
+        if ($('#btnValueDelete')) {
+            $('#btnValueDelete').toggleClass('disabled', !ids.length);
+        }
+        if ($('#btnValueEdit')) {
+            $('#btnValueEdit').toggleClass('disabled', ids.length != 1);
+        }
+    });
+
+
     function showDataDictDetailForm(dictType) {
-        var url = '@Url.Content("~/SystemManage/DataDictDetail/DataDictDetailIndex")' + '?dictType=' + dictType;
-        createMenuItem(url, "字典数据");
+        DictType = dictType;
+        //直接编写成另外一个列表获取数据
+        searchValueGrid();
+    }
+
+    function InitValueGrid() {
+
+        var queryUrl = '@Url.Content("~/SystemManage/DataDictDetail/GetPageListJson")';
+        $('#gridValueTable').ysTable({
+            url: queryUrl,
+            sortName: 'DictSort',
+            sortOrder: 'Asc',
+            toolbar: '#toolbarPermission',
+            columns: [
+                { checkbox: true, visible: true },
+                { field: 'Id', title: 'Id', visible: false },
+                { field: 'DictKey', title: '字典键' },
+                { field: 'DictValue', title: '字典值' },
+                {
+                    field: 'IsDefault', title: '系统默认', formatter: function (value, row, index) {
+                        return ys.getValueByKey(ys.getJson(@Html.Raw(typeof(IsEnum).EnumToDictionaryString())), value);
+                    }
+                },
+                {
+                    field: 'ListClass', title: '显示样式', formatter: function (value, row, index) {
+                        if (value) {
+                            return '<span class="badge badge-' + value + '">&nbsp;&nbsp;&nbsp;&nbsp;</span>';
+                        }
+                    }
+                },
+                {
+                    field: 'DictStatus', title: '状态', formatter: function (value, row, index) {
+                        if (row.DictStatus == "@StatusEnum.Yes.ParseToInt()") {
+                            return '<span class="badge badge-primary">' + "@StatusEnum.Yes.GetDescription()" + '</span>';
+                        } else {
+                            return '<span class="badge badge-warning">' + "@StatusEnum.No.GetDescription()" + '</span>';
+                        }
+                    }
+                },
+                {
+                    field: 'BaseModifyTime', title: '创建时间', formatter: function (value, row, index) {
+                        return ys.formatDate(value, "yyyy-MM-dd HH:mm:ss");
+                    }
+                }
+            ],
+            queryParams: function (params) {
+                var pagination = $('#gridTable').ysTable('getPagination', params);
+                var queryString = $('#searchDiv').getWebControls(pagination);
+                queryString.DictType = DictType;
+                return queryString;
+            }
+        });
+    }
+
+
+
+    function showValueSaveForm(bAdd) {
+        var id = 0;
+        if (!bAdd) {
+            var selectedRow = $("#gridValueTable").bootstrapTable("getSelections");
+            if (!ys.checkRowEdit(selectedRow)) {
+                return;
+            }
+            else {
+                id = selectedRow[0].Id;
+            }
+        }
+        ys.openDialog({
+            title: id > 0 ? "编辑字典数据" : "添加字典数据",
+            content: '@Url.Content("~/SystemManage/DataDictDetail/DataDictDetailForm")' + '?id=' + id + '&dictType=' + dictType,
+            callback: function (index, layero) {
+                var iframeWin = window[layero.find('iframe')[0]['name']];
+                iframeWin.saveForm(index);
+            }
+        });
+    }
+
+    function deleteValueForm() {
+        var selectedRow = $("#gridValueTable").bootstrapTable("getSelections");
+        if (ys.checkRowDelete(selectedRow)) {
+            ys.confirm("确认要删除选中的" + selectedRow.length + "条数据吗？", function () {
+                var ids = ys.getIds(selectedRow);
+                ys.ajax({
+                    url: '@Url.Content("~/SystemManage/DataDictDetail/DeleteFormJson")' + '?ids=' + ids,
+                    type: "post",
+                    success: function (obj) {
+                        if (obj.Tag == 1) {
+                            ys.msgSuccess(obj.Message);
+                            searchValueGrid();
+                        }
+                        else {
+                            ys.msgError(obj.Message);
+                        }
+                    }
+                });
+            });
+        }
     }
 </script>
