--- a/YS.Admin.Web/YS.Admin.Web/Areas/SystemManage/Views/DataDictDetail/DataDictDetailForm.cshtml
+++ b/YS.Admin.Web/YS.Admin.Web/Areas/SystemManage/Views/DataDictDetail/DataDictDetailForm.cshtml
@@ -122,7 +122,7 @@
                             top.initDataDict();
                         }
                         ys.msgSuccess(obj.Message);
-                        parent.searchGrid();
+                        parent.searchValueGrid();
                         parent.layer.close(index);
                     }
                     else {
